scrollbar fix

--- a/src/_includes/css/components.scss
+++ b/src/_includes/css/components.scss
@@ -145,7 +145,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: none;
+  background-color: $background-color;
 }
 
 /* Handle */
